simplified it to one main mock

--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dart Mock Exam - Enhanced</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Dart Mock Exam</title> <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Dart Mock Exam</h1>
-        <p>Choose your challenge or take the full mock test!</p>
+        <p>Test your knowledge of Dart programming concepts.</p>
     </header>
 
-    <section id="mode-selection">
-        <h2>Select Exam Mode:</h2>
-        <button id="mode-main-mock" class="mode-button">Full Mock Exam (25 Qs)</button>
-        <button id="mode-code-snippets" class="mode-button">Code Snippets Only</button>
-        <button id="mode-conceptual" class="mode-button">Conceptual Questions Only</button>
+    <section id="exam-initiation">
+        <button id="start-exam-btn" class="mode-button">Start Mock Exam</button>
     </section>
 
     <div id="exam-area" style="display:none;"> <div id="timer-container">
@@ -33,7 +29,7 @@
             <p>Your score: <span id="score"></span></p>
             <div id="feedback-area">
                 </div>
-            <button id="restart-btn" class="mode-button">Try Another Mode</button>
+            <button id="restart-btn" class="mode-button">Take Exam Again</button>
         </section>
     </div>
 
